@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.2 2004/06/23 18:30:27 xtraeme Exp $
+$NetBSD: distinfo,v 1.3 2004/06/28 04:01:11 xtraeme Exp $
 
-SHA1 (mips64emul-20040623.tar.gz) = 68648ca6265f2044cc0a99b6a62c5b9a1ad3d508
-Size (mips64emul-20040623.tar.gz) = 377312 bytes
+SHA1 (mips64emul-20040627.tar.gz) = e9172c29ab072dbc8503100b572503063cf2ba1a
+Size (mips64emul-20040627.tar.gz) = 381622 bytes
